# engineering_practices_ml

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  linting.md  pyproject.toml
.dvc/: config
HW 1/: README.md  hw08_task.ipynb
HW 1/scripts/: main.py  tree_classifier.py  visualisation.py
HW 8. Decision Tree/scripts/: dataset.py  tree.py
data/: .gitignore  train.csv.dvc
dvclive/: metrics.json  params.yaml  report.html
dvclive/plots/metrics/: accuracy.tsv
turovkv_hw_eng_prac_ml/: dataset.py  main.py  train.py  tree.py  tree_classifier.py  visualisation.py
