[tool.poetry]
name = "turovkv-hw-eng-prac-ml"
version = "0.1.0"
description = ""
authors = ["Kirill Turov <turovkv@yandex.ru>"]
readme = "README.md"
packages = [{include = "turovkv_hw_eng_prac_ml"}]

[tool.poetry.dependencies]
python = "^3.10"
contourpy = "1.0.6"
cycler = "0.11.0"
fonttools = "4.38.0"
joblib = "1.2.0"
kiwisolver = "1.4.4"
matplotlib = "3.6.2"
numpy = "1.23.4"
packaging = "21.3"
pandas = "1.5.1"
pillow = "9.3.0"
pyparsing = "3.0.9"
python-dateutil = "2.8.2"
pytz = "2022.6"
scikit-learn = "1.1.3"
scipy = "1.9.3"
six = "1.16.0"
threadpoolctl = "3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^6.0.0"
flake8-return = "^1.2.0"
flake8-use-fstring = "^1.4"
flake8-match = "^1.1.0"
pre-commit = "^2.20.0"
flake8-simplify = "^0.19.3"
flake8-unused-arguments = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
